# DABHounds

./: .cache  .gitignore  CHANGELOG.md  DEVLOGS.md  LICENSE  MANIFEST.in  README.md  Spotify OAuth Guide.md  TODO.md  config.json  dabhounds.py  pyproject.toml  requirements.txt  whatsnew.md
.github/workflows/: release.yml
core/: auth.py  dab.py  library.py  musicbrainz.py  qobuz.py  report.py  spotify.py  spotify_auth.py  youtube.py
dabhounds/: __init__.py  cli.py
dabhounds/core/: auth.py  dab.py  downloader.py  library.py  musicbrainz.py  qobuz.py  report.py  spotify.py  spotify_auth.py  tui_report.py  youtube_parser_v3.py
src/dabhounds/: __init__.py  cli.py
src/dabhounds/core/: auth.py  cover.py  dab.py  downloader.py  library.py  musicbrainz.py  report.py  tagger.py
